--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
